# cnbiros_robotino

./: CMakeLists.txt  package.xml
examples/: example_base.cpp  example_infrared.cpp
include/cnbiros_robotino/: Base.hpp  Communication.hpp  Flags.hpp  Infrared.hpp  Motors.hpp  Odometry.hpp  Power.hpp
launch/: export_video.launch  record_kinect.launch  ros_robotino.launch
src/: Base.cpp  Communication.cpp  Infrared.cpp  Motors.cpp  Odometry.cpp  Power.cpp  ros_robotino.cpp
srv/: CommService.srv  GetOdometrySrv.srv  GetPowerSrv.srv  SetOdometrySrv.srv
