<?xml version="1.0"?>
<package>
  <name>cnbiros_robotino</name>
  <version>0.1.0</version>
  <description>CNBIROS Robotino library</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>cnbiros_core</build_depend>
  <run_depend>cnbiros_core</run_depend>

</package>
